# flask-js

./: README.md  pyproject.toml
python/src/: flaskjs.py
python/src/static/css/: model-navigator.39400a20.css  model-navigator.39400a20.css.map
python/src/static/js/: model-navigator.js  model-navigator.js.LICENSE.txt
python/src/templates/: got_js.html
