[tool.poetry]
name = "flask-js"
version = "0.1.0"
description = "Demo model-navigator in Flask application"
authors = ["Mark A. Jensen <mark.jensen@nih.gov>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "flask_js"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
